# ZenDNS

./: .gitignore  Cargo.toml  README.md  dist-workspace.toml
.github/workflows/: build-setup.yml  release.yml
src/: common.rs  config_manager.rs  ip.rs  main.rs  schema.rs  utils.rs
src/providers/: cloudflare.rs  duckdns.rs  mod.rs  namecheap.rs  porkbun.rs
