[package]
name = "zendns"
version = "0.1.0"
edition = "2021"
description = "Manage Dynamic DNS with serenity"
homepage = "https://github.com/dotzenith/ZenDNS"
repository = "https://github.com/dotzenith/ZenDNS"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
