[package]
name = "zendns"
version = "0.1.2"
edition = "2021"
description = "Manage Dynamic DNS with serenity"
homepage = "https://github.com/dotzenith/ZenDNS"
repository = "https://github.com/dotzenith/ZenDNS"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
config = { version = "0.14", default-features = false, features = ["yaml"] }
simplelog = "0.12.2"
log = "0.4.22"
clap = { version = "4.5.16", features = ["cargo"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.21.1"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = ["shell", "powershell", "homebrew"]
# A GitHub repo to push Homebrew formulas to
tap = "dotzenith/homebrew-tap"
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "aarch64-unknown-linux-gnu", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Path that installers should place binaries in
install-path = "CARGO_HOME"
# Publish jobs to run in CI
publish-jobs = ["homebrew"]
# Whether to install an updater program
install-updater = false
# Add extra steps to build
github-build-setup = "build-setup.yml"

[workspace.metadata.dist.github-custom-runners]
aarch64-unknown-linux-gnu = "buildjet-2vcpu-ubuntu-2204-arm"
