[package]
name = "zendns"
version = "0.3.2"
edition = "2021"
description = "Manage Dynamic DNS with serenity"
homepage = "https://github.com/dotzenith/ZenDNS"
repository = "https://github.com/dotzenith/ZenDNS"
license = "MIT"

[dependencies]
anyhow = "1.0.86"
regex = "1.10.6"
reqwest = { version = "0.12.7", default-features = false, features = ["blocking", "json", "rustls-tls"] }
serde = { version = "1.0.209", features = ["derive"] }
serde_json = "1.0.127"
config = { version = "0.14", default-features = false, features = ["yaml"] }
simplelog = "0.12.2"
log = "0.4.22"
clap = { version = "4.5.16", features = ["cargo"] }
platform-dirs = "0.3.0"
bincode = "1.3.3"
nutype = { version = "0.5.0", features = ["serde"] }

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
